libraries/ckit/regression/valid-programs/a65.c
/* null function pointers */

void f(int *x) {
  return;
}

void main(){
 f(0);
}

