libraries/ckit/regression/invalid-programs/r63.c
/* null function pointers */

void f(int x, void y);

void main(){
 f(0);
}

